--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -261,7 +261,7 @@
     }
     .战果,
     .作案手段 {
-      padding: 0 px(24) px(24);
+      padding: 0 px(24);
       > table {
         margin-top: px(38);
         width: 100%;
